Fixed vertical alignment of text and icons in the sidebar.

--- a/app/assets/stylesheets/partials/_sidebar.scss
+++ b/app/assets/stylesheets/partials/_sidebar.scss
@@ -130,24 +130,28 @@
         }
         margin-right: 10px;
         text-align: right;
+
+        .badge {
+          padding-bottom: 4px;
+        }
       }
     }
 
     .folder-arrow {
-      margin-top: 4px;
+      margin-top: 6px;
       width: 13px;
     }
 
     .folder-unread-badge {
       margin: {
-        top: 2px;
+        top: 3px;
         right: 0;
       }
     }
 
     .folder-icon,
     .feed-icon {
-      margin-top: 4px;
+      margin-top: 6px;
     }
 
     .sidebar-folder{
@@ -180,6 +184,14 @@
       width: 100%;
       padding-left: 5px;
       vertical-align: middle;
+    }
+
+    .sidebar-feed-title {
+      height: 23px;
+    }
+
+    .sidebar-folder-title {
+      height: 24px;
     }
   }
 }
